# dose_every_well

./: README.md  pyproject.toml
demo/: well_positions.json
docs/: README.md  architecture.md  examples.md  python-api.md  quick-start.md  web-api.md
examples/: example_calibration.py  example_standalone.py  example_with_cnc.py
src/dose_every_well/: __init__.py  core.py  dosing_system.py
src/dose_every_well/config/: README.md  standalone.yaml  with_cnc.yaml
