[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dose_every_well"
version = "0.7.0"
description='Precision weighing and dosing system for microplate automation on Raspberry Pi'
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
authors = [
    {name = "Yang Cao", email = "yangcyril.cao@utoronto.ca"}
]
dependencies = [
    "pyserial==3.5",
    "matplotlib==3.10.0",
    "PyYAML==6.0.2",
    "matterlab_balances",
    "smbus2",
    # Raspberry Pi dependencies (primary target platform)
    "adafruit-circuitpython-pca9685",
    "adafruit-circuitpython-motor",
    "rpi-lgpio"
]
classifiers = [
    "Development Status :: 1 - Planning",
    "License :: MIT",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Software Development",
]

[project.optional-dependencies]
# Development on non-Raspberry Pi platforms
dev = [
    "pytest",
    "black",
    "flake8"
]

[tool.setuptools.package-dir]
dose_every_well = 'src/dose_every_well'